--- a/slides/mlmath04.ipynb
+++ b/slides/mlmath04.ipynb
@@ -102,8 +102,7 @@
    "source": [
     "* 로지스틱 회귀 모델에서 샘플 $\\mathbf x$가 양성 클래스에 속할 확률\n",
     "\n",
-    "$$\\hat p = h_\\theta (\\mathbf x)\n",
-    "= \\sigma(\\theta_0 + \\theta_1\\, x_1 + \\cdots + \\theta_n\\, x_n)$$"
+    "$$\\hat p = \\sigma(\\theta_0 + \\theta_1\\, x_1 + \\cdots + \\theta_n\\, x_n)$$"
    ]
   },
   {
@@ -153,6 +152,83 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 예측을 잘 하는 파라미터 $\\theta_0, \\dots, \\theta_n$를 찾아야 함.\n",
+    "    - 다양한 머신러닝 기법 존재\n",
+    "    - 기본은 경사하강법"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### 예제: 붓꽃 데이터셋"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    }
+   },
+   "source": [
+    "* 꽃받침(sepal)과 꽃입(petal)과 관련된 4개의 특성 사용: 꽃받침 길이, 꽃받침 너비, 꽃잎 길이, 꽃잎 너비"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 세 개의 품종 사용: 세토사, 버시컬러, 버지니카"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    }
+   },
+   "source": [
+    "* 타깃: \n",
+    "    * 1: 버지니카 품종 맞음\n",
+    "    * 0: 버지니카 품종 아님"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    }
+   },
+   "source": [
+    "* 양성(1) 클래스인 경우: \n",
+    "\n",
+    "$$\\theta_0 + \\theta_1\\, x_1 + \\cdots + \\theta_n\\, x_4 \\ge 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    }
+   },
+   "source": [
+    "* 음성(0) 클래스인 경우: \n",
+    "\n",
+    "$$\\theta_0 + \\theta_1\\, x_1 + \\cdots + \\theta_n\\, x_4 < 0$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -170,11 +246,15 @@
     }
    },
    "source": [
-    "* 비용함수: 로그 손실(log loss) 함수 사용\n",
+    "* 비용함수: 로그 손실(log loss) 함수 사용. 단, $(i)$는 $i$번째 샘플을 가리킴.\n",
     "\n",
     "$$\n",
-    "J(\\theta) = \n",
-    "- \\frac{1}{m}\\, \\sum_{i=1}^{m}\\, [y^{(i)}\\, \\log(\\,\\hat p^{(i)}\\,) + (1-y^{(i)})\\, \\log(\\,1 - \\hat p^{(i)}\\,)]\n",
+    "\\begin{align*}\n",
+    "J(\\mathbf{\\theta}) \n",
+    "&= \n",
+    "- \\frac{1}{m}\\, \\sum_{i=1}^{m}\\, [y^{(i)}\\, \\log(\\,\\hat p^{(i)}\\,) + (1-y^{(i)})\\, \\log(\\,1 - \\hat p^{(i)}\\,)] \\\\[1ex]\n",
+    "\\hat p^{(i)} &= \\sigma(\\theta_0 + \\theta_1\\, x_1^{(i)} + \\cdots + \\theta_n\\, x_n^{(i)})\n",
+    "\\end{align*}\n",
     "$$"
    ]
   },
@@ -186,7 +266,9 @@
     }
    },
    "source": [
-    "* 모델 훈련: 위 비용함수에 대해 경사 하강법 적용"
+    "* 모델 훈련\n",
+    "    - 위 비용함수를 최소로 하는 $\\theta_0, \\dots, \\theta_n$을 찾아야 함.\n",
+    "    - 위 비용함수에 대해 경사 하강법 적용"
    ]
   },
   {
@@ -243,40 +325,6 @@
     }
    },
    "source": [
-    "#### 로그 손실 함수의 편도 함수"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$$\n",
-    "\\dfrac{\\partial}{\\partial \\theta_j} \\text{J}(\\boldsymbol{\\theta}) = \\dfrac{1}{m}\\sum\\limits_{i=1}^{m}\\left(\\mathbf{\\sigma(\\boldsymbol{\\theta}}^T \\mathbf{x}^{(i)}) - y^{(i)}\\right)\\, x_j^{(i)}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 편도 함수가 선형 회귀의 경우와 매우 비슷한 것에 대한 확률론적 근거가 있음."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* __참고:__ [앤드류 응(Andrew Ng) 교수의 Stanford CS229](https://www.youtube.com/watch?v=jGwO_UgTS7I&list=PLoROMvodv4rMiGQp3WXShtMGgzqpfVfbU)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### 결정 경계"
    ]
   },
@@ -284,51 +332,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### 예제: 붓꽃 데이터셋"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": ""
     }
    },
    "source": [
-    "* 꽃받침(sepal)과 꽃입(petal)과 관련된 4개의 특성 사용\n",
-    "    * 꽃받침 길이\n",
-    "    * 꽃받침 너비\n",
-    "    * 꽃잎 길이\n",
-    "    * 꽃잎 너비"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": ""
-    }
-   },
-   "source": [
-    "* 타깃: 세 개의 품종\n",
-    "    * 0: Iris-Setosa(세토사)\n",
-    "    * 1: Iris-Versicolor(버시컬러)\n",
-    "    * 2: Iris-Virginica(버지니카)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### 꽃잎의 너비를 기준으로 Iris-Virginica 여부 판정하기\n",
+    "#### 예제: 꽃잎의 너비를 기준으로 Iris-Virginica 여부 판정하기\n",
     "\n",
     "* 결정경계: 약 1.6cm"
    ]
