practices02 is being prepared

--- a/practices/practice02.ipynb
+++ b/practices/practice02.ipynb
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `painting_check_2()`를 작성하라.\n",
+    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `print_grid2()`를 작성하라.\n",
     "\n",
     "```python\n",
     "+ - - - - + - - - - +\n",
@@ -368,13 +368,257 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_twice(f):\n",
+    "    f()\n",
+    "    f()\n",
+    "\n",
+    "def do_four(f):\n",
+    "    do_twice(f)\n",
+    "    do_twice(f)\n",
+    "\n",
+    "def print_beam():\n",
+    "    print('+ - - - -', end=' ')\n",
+    "\n",
+    "def print_post():\n",
+    "    print('|        ', end=' ')\n",
+    "\n",
+    "def print_beams():\n",
+    "    do_twice(print_beam)\n",
+    "    print('+')\n",
+    "\n",
+    "def print_posts():\n",
+    "    do_twice(print_post)\n",
+    "    print('|')\n",
+    "\n",
+    "def print_row():\n",
+    "    print_beams()\n",
+    "    do_four(print_posts)\n",
+    "\n",
+    "def print_grid():\n",
+    "    do_twice(print_row)\n",
+    "    print_beams()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - - + - - - - +\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "+ - - - - + - - - - +\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "|         |         |\n",
+      "+ - - - - + - - - - +\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_four_one(f, g, h):\n",
+    "    f()\n",
+    "    do_four(g)\n",
+    "    h()\n",
+    "\n",
+    "def print_plus():\n",
+    "    print('+', end=' ')\n",
+    "\n",
+    "def print_dash():\n",
+    "    print('-', end=' ')\n",
+    "\n",
+    "def print_bar():\n",
+    "    print('|', end=' ')\n",
+    "\n",
+    "def print_space():\n",
+    "    print(' ', end=' ')\n",
+    "\n",
+    "def print_end():\n",
+    "    print()\n",
+    "\n",
+    "def nothing():\n",
+    "    \"do nothing\"\n",
+    "\n",
+    "def print1beam():\n",
+    "    one_four_one(nothing, print_dash, print_plus)\n",
+    "\n",
+    "def print1post():\n",
+    "    one_four_one(nothing, print_space, print_bar)\n",
+    "\n",
+    "def print4beams():\n",
+    "    one_four_one(print_plus, print1beam, print_end)\n",
+    "\n",
+    "def print4posts():\n",
+    "    one_four_one(print_bar, print1post, print_end)\n",
+    "\n",
+    "def print_row():\n",
+    "    one_four_one(nothing, print4posts, print4beams)\n",
+    "\n",
+    "def print_grid():\n",
+    "    one_four_one(print4beams, print_row, nothing)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - - + - - - - + - - - - + - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + - - - - + - - - - + - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + - - - - + - - - - + - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + - - - - + - - - - + - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + - - - - + - - - - + - - - - + \n"
+     ]
+    }
+   ],
+   "source": [
+    "print_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_N(f, n):\n",
+    "    for i in range(n):\n",
+    "        f(n)\n",
+    "\n",
+    "def one_N_one(f, g, h, n):\n",
+    "    f(n)\n",
+    "    do_N(g, n)\n",
+    "    h(1)\n",
+    "\n",
+    "def print_plus(n):\n",
+    "    print('+', end=' ')\n",
+    "\n",
+    "def print_dash(n):\n",
+    "    print('-', end=' ')\n",
+    "\n",
+    "def print_bar(n):\n",
+    "    print('|', end=' ')\n",
+    "\n",
+    "def print_space(n):\n",
+    "    print(' ', end=' ')\n",
+    "\n",
+    "def print_end(n):\n",
+    "    print()\n",
+    "\n",
+    "def nothing(n):\n",
+    "    \"do nothing\"\n",
+    "\n",
+    "def print1beam(n):\n",
+    "    \"\"\"대시 네 개와 플러스 하나\n",
+    "    ----+\n",
+    "    \"\"\"\n",
+    "    one_N_one(nothing, print_dash, print_plus, 4)\n",
+    "\n",
+    "def print1post(n):\n",
+    "    \"\"\"스페이스 네 개와 파이프 하나\n",
+    "        |\n",
+    "    \"\"\"\n",
+    "    one_N_one(nothing, print_space, print_bar, 4)\n",
+    "\n",
+    "def printNbeams(n):\n",
+    "    one_N_one(print_plus, print1beam, print_end, n)\n",
+    "\n",
+    "def printNposts(n):\n",
+    "    one_N_one(print_bar, print1post, print_end, n)\n",
+    "\n",
+    "def print_row(n):\n",
+    "    one_N_one(nothing, printNposts, printNbeams, n)\n",
+    "\n",
+    "def print_grid(n):\n",
+    "    one_N_one(printNbeams, print_row, nothing, n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ - - - - + - - - - + - - - - + - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "|         |         |         |         | \n",
+      "+ - - - - + \n"
+     ]
+    }
+   ],
+   "source": [
+    "print_grid(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
-    "def painting_check_2():\n",
+    "def print_grid2():\n",
     "    pass\n",
     "\n",
     "    return None"
@@ -386,14 +630,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "painting_check_2()"
+    "print_grid2()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 6.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `painting_check_4()`를 작성하라.\n",
+    "__문제 6.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `print_grid4()`를 작성하라.\n",
     "단, 입력값은 없으며, 반환값은 사용된 `+` 기호의 개수이다.\n",
     "\n",
     "힌트: 함수의 기능을 분리하여 여러 개의 함수로 정의한 다음에 정의된 함수들을 적절하게 조합하라."
@@ -407,7 +651,7 @@
    "source": [
     "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
     "\n",
-    "def painting_check_4():\n",
+    "def print_grid4():\n",
     "    pass\n",
     "\n",
     "    return None"
@@ -419,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "painting_check_4()"
+    "print_grid4()"
    ]
   },
   {
