practices02 is being explained

--- a/practices/practice02.ipynb
+++ b/practices/practice02.ipynb
@@ -28,23 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
     "\n",
     "def inserting_tab(s):\n",
-    "    pass\n",
-    "\n",
-    "    return None"
+    "    return \"\\t\" + s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\thello\n"
+     ]
+    }
+   ],
    "source": [
     "print(inserting_tab(\"hello\"))"
    ]
@@ -59,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "count_a = 0\n",
-    "for word in song:\n",
-    "    if word == 'a':\n",
+    "\n",
+    "for letter in song:\n",
+    "    if letter == 'a':\n",
     "        count_a += 1\n",
     "\n",
     "print(count_a)"
@@ -96,13 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "count_w = 0\n",
-    "for word in song.lower():\n",
-    "    if word == 'w':\n",
+    "for letter in song.lower():\n",
+    "    if letter == 'w':\n",
     "        count_w += 1\n",
     "\n",
     "print(count_w)"
@@ -112,21 +135,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. `song`이 가리키는 문자열에서 모음과 공백을 제거한 문자열 `whnyrsmlngthwhlwrldsmlswthy`를 \n",
+    "A. `song`이 가리키는 문자열에서 모음과 공백, 그리고 쉼표를 제거한 문자열 `whnyrsmlngthwhlwrldsmlswthy`를 \n",
     "생성하는 코드를 구현하라. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "whnrsmlngthwhlwrldsmlswth\n"
+     ]
+    }
+   ],
    "source": [
     "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
     "new_song = ''\n",
-    "for word in song.lower():\n",
-    "    pass\n",
+    "vowel_space = 'aeiou ,'\n",
+    "\n",
+    "for letter in song.lower():\n",
+    "    if letter in vowel_space:\n",
+    "        pass\n",
+    "    else:\n",
+    "#         new_song = new_song+letter\n",
+    "        new_song += letter\n",
     "\n",
     "print(new_song)"
    ]
@@ -143,20 +180,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'whnyrsmlngthwhlwrldsmlswthy'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
     "def remove_letters(s):\n",
     "    new_song = ''\n",
-    "    for word in song.lower():\n",
-    "        pass\n",
+    "    for letter in song.lower():\n",
+    "        if letter in s:\n",
+    "            pass\n",
+    "        else:\n",
+    "            new_song += letter\n",
     "    \n",
     "    return new_song\n",
     "\n",
-    "remove_letters('aeiou ')"
+    "remove_letters('aeiou ,')"
    ]
   },
   {
@@ -180,16 +231,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "i = 1\n",
     "\n",
-    "while i < None:\n",
-    "    pass"
+    "while i < 6:\n",
+    "    print(\"*\" * (6-i))\n",
+    "    \n",
+    "    i += 1"
    ]
   },
   {
@@ -209,23 +274,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****\n",
+      " ***\n",
+      "  *\n"
+     ]
+    }
+   ],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "i = 1\n",
     "\n",
-    "while i < None:\n",
-    "    pass"
+    "while i < 4:\n",
+    "    print(\" \"* (i-1), end=\"\")\n",
+    "    print(\"*\" * (6-2*i+1))\n",
+    "    \n",
+    "    i += 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) 위 (b)의 문제를 임의의 양의 홀수 n에 대하여 작동하도록 일반화하는 함수 `reversed_triangle()`를\n",
+    "C. 위 B의 문제를 임의의 양의 홀수 n에 대하여 작동하도록 일반화하는 함수 `reversed_triangle()`를\n",
     "정의하라. 예를 들어, n=7이면 다음과 같이 출력해야 한다.\n",
     "\n",
     "```python\n",
@@ -340,7 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `print_grid2()`를 작성하라.\n",
+    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `print_grid()`를 작성하라.\n",
     "\n",
     "```python\n",
     "+ - - - - + - - - - +\n",
@@ -367,8 +445,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__견본답안__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -431,8 +516,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `print_grid()`를 작성하라.\n",
+    "\n",
+    "```python\n",
+    "+ - - - - + - - - - + - - - - + - - - - +\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "+ - - - - + - - - - + - - - - + - - - - +\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "+ - - - - + - - - - + - - - - + - - - - +\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "+ - - - - + - - - - + - - - - + - - - - +\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "|         |         |         |         |\n",
+    "+ - - - - + - - - - + - - - - + - - - - +\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__견본답안__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -513,192 +636,6 @@
    ],
    "source": [
     "print_grid()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def do_N(f, n):\n",
-    "    for i in range(n):\n",
-    "        f(n)\n",
-    "\n",
-    "def one_N_one(f, g, h, n):\n",
-    "    f(n)\n",
-    "    do_N(g, n)\n",
-    "    h(1)\n",
-    "\n",
-    "def print_plus(n):\n",
-    "    print('+', end=' ')\n",
-    "\n",
-    "def print_dash(n):\n",
-    "    print('-', end=' ')\n",
-    "\n",
-    "def print_bar(n):\n",
-    "    print('|', end=' ')\n",
-    "\n",
-    "def print_space(n):\n",
-    "    print(' ', end=' ')\n",
-    "\n",
-    "def print_end(n):\n",
-    "    print()\n",
-    "\n",
-    "def nothing(n):\n",
-    "    \"do nothing\"\n",
-    "\n",
-    "def print1beam(n):\n",
-    "    \"\"\"대시 네 개와 플러스 하나\n",
-    "    ----+\n",
-    "    \"\"\"\n",
-    "    one_N_one(nothing, print_dash, print_plus, 4)\n",
-    "\n",
-    "def print1post(n):\n",
-    "    \"\"\"스페이스 네 개와 파이프 하나\n",
-    "        |\n",
-    "    \"\"\"\n",
-    "    one_N_one(nothing, print_space, print_bar, 4)\n",
-    "\n",
-    "def printNbeams(n):\n",
-    "    one_N_one(print_plus, print1beam, print_end, n)\n",
-    "\n",
-    "def printNposts(n):\n",
-    "    one_N_one(print_bar, print1post, print_end, n)\n",
-    "\n",
-    "def print_row(n):\n",
-    "    one_N_one(nothing, printNposts, printNbeams, n)\n",
-    "\n",
-    "def print_grid(n):\n",
-    "    one_N_one(printNbeams, print_row, nothing, n)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+ - - - - + - - - - + - - - - + - - - - + \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "+ - - - - + \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "+ - - - - + \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "+ - - - - + \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "|         |         |         |         | \n",
-      "+ - - - - + \n"
-     ]
-    }
-   ],
-   "source": [
-    "print_grid(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pass 를 적절한 코드로 대체하라.\n",
-    "\n",
-    "def print_grid2():\n",
-    "    pass\n",
-    "\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_grid2()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__문제 6.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `print_grid4()`를 작성하라.\n",
-    "단, 입력값은 없으며, 반환값은 사용된 `+` 기호의 개수이다.\n",
-    "\n",
-    "힌트: 함수의 기능을 분리하여 여러 개의 함수로 정의한 다음에 정의된 함수들을 적절하게 조합하라."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
-    "\n",
-    "def print_grid4():\n",
-    "    pass\n",
-    "\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_grid4()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__문제 7.__ 문제 5와 문제 6의 함수를 일반화하여 입력값 n이 주어지면 \n",
-    "n개의 행과 n개의 열을 갖는 격자를 그리는 함수 `painting_check()`를 작성하라.\n",
-    "단, 입력값은 양의 정수를 받는 n이며, 반환값은 사용된 `+` 기호의 개수이다.\n",
-    "또한 `n=4`를 키워드 인자로 사용한다.\n",
-    "\n",
-    "힌트: 함수의 입력값 n에 대한 for 반복문을 활용하라."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
-    "\n",
-    "def painting_check(n=4):\n",
-    "    pass\n",
-    "\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "painting_check()"
    ]
   }
  ],
