practices02 is ready

--- a/practices/practice02.ipynb
+++ b/practices/practice02.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\thello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(inserting_tab(\"hello\"))"
    ]
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "whnrsmlngthwhlwrldsmlswth\n"
+      "whnyrsmlngthwhlwrldsmlswthy\n"
      ]
     }
    ],
@@ -180,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +181,7 @@
        "'whnyrsmlngthwhlwrldsmlswthy'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -318,20 +310,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "def reversed_triangle(n):\n",
-    "    # n은 홀수 이어야 함.\n",
     "    if n % 2 == 0:\n",
-    "        return None\n",
-    "    \n",
+    "        pass\n",
+    "    # 이제부터 n은 홀수임.\n",
+    "\n",
     "    i = 1\n",
-    "    while i < None:\n",
-    "        pass"
+    "\n",
+    "    while i < n:\n",
+    "        k = (n+1) - 2*i + 1\n",
+    "        if k > 0:\n",
+    "            print(\" \" * (i-1), end=\"\")\n",
+    "            print(\"*\" * k)\n",
+    "        else:\n",
+    "            break\n",
+    "        i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******\n",
+      " *****\n",
+      "  ***\n",
+      "   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "reversed_triangle(7)"
    ]
   },
   {
@@ -355,38 +374,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 10 5 16 8 4 2 1 "
+     ]
+    }
+   ],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "x = 3\n",
     "print(x, end=' ')\n",
     "\n",
-    "while x > None:\n",
+    "while x > 1:\n",
     "    if x % 2 == 0:\n",
-    "        pass\n",
+    "        x = x//2\n",
+    "        print(x, end=' ')\n",
     "    else:\n",
-    "        pass"
+    "        x = x*3 + 1 \n",
+    "        print(x, end=' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 22 11 34 17 52 26 13 40 20 10 5 16 8 4 2 1 "
+     ]
+    }
+   ],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "x = 7\n",
     "print(x, end=' ')\n",
     "\n",
-    "while x > None:\n",
+    "while x > 1:\n",
     "    if x % 2 == 0:\n",
-    "        pass\n",
+    "        x = x//2\n",
+    "        print(x, end=' ')\n",
     "    else:\n",
-    "        pass"
+    "        x = x*3 + 1 \n",
+    "        print(x, end=' ')"
    ]
   },
   {
@@ -398,20 +437,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111 334 167 502 251 754 377 1132 566 283 850 425 1276 638 319 958 479 1438 719 2158 1079 3238 1619 4858 2429 7288 3644 1822 911 2734 1367 4102 2051 6154 3077 9232 4616 2308 1154 577 1732 866 433 1300 650 325 976 488 244 122 61 184 92 46 23 70 35 106 53 160 80 40 20 10 5 16 8 4 2 1 "
+     ]
+    }
+   ],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
     "x = 111\n",
     "print(x, end=' ')\n",
     "\n",
-    "while x > None:\n",
+    "while x > 1:\n",
     "    if x % 2 == 0:\n",
-    "        pass\n",
+    "        x = x//2\n",
+    "        print(x, end=' ')\n",
     "    else:\n",
-    "        pass"
+    "        x = x*3 + 1 \n",
+    "        print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "인를 받아 위 수열(콜라츠 수열)을 출력하는 함수 `collatz()`를 선언하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collatz(x):\n",
+    "    print(x, end=' ')\n",
+    "\n",
+    "    while x > 1:\n",
+    "        if x % 2 == 0:\n",
+    "            x = x//2\n",
+    "            print(x, end=' ')\n",
+    "        else:\n",
+    "            x = x*3 + 1 \n",
+    "            print(x, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111 334 167 502 251 754 377 1132 566 283 850 425 1276 638 319 958 479 1438 719 2158 1079 3238 1619 4858 2429 7288 3644 1822 911 2734 1367 4102 2051 6154 3077 9232 4616 2308 1154 577 1732 866 433 1300 650 325 976 488 244 122 61 184 92 46 23 70 35 106 53 160 80 40 20 10 5 16 8 4 2 1 "
+     ]
+    }
+   ],
+   "source": [
+    "collatz(111)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "653821 1961464 980732 490366 245183 735550 367775 1103326 551663 1654990 827495 2482486 1241243 3723730 1861865 5585596 2792798 1396399 4189198 2094599 6283798 3141899 9425698 4712849 14138548 7069274 3534637 10603912 5301956 2650978 1325489 3976468 1988234 994117 2982352 1491176 745588 372794 186397 559192 279596 139798 69899 209698 104849 314548 157274 78637 235912 117956 58978 29489 88468 44234 22117 66352 33176 16588 8294 4147 12442 6221 18664 9332 4666 2333 7000 3500 1750 875 2626 1313 3940 1970 985 2956 1478 739 2218 1109 3328 1664 832 416 208 104 52 26 13 40 20 10 5 16 8 4 2 1 "
+     ]
+    }
+   ],
+   "source": [
+    "collatz(653821)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`collatz()` 함수가 출력하는 수열의 길이를 반환하도록 선언하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collatz(x):\n",
+    "    print(x, end=' ')\n",
+    "    count = 1\n",
+    "    \n",
+    "    while x > 1:\n",
+    "        count += 1\n",
+    "        if x % 2 == 0:\n",
+    "            x = x//2\n",
+    "            print(x, end=' ')\n",
+    "        else:\n",
+    "            x = x*3 + 1 \n",
+    "            print(x, end=' ')\n",
+    "            \n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "653821 1961464 980732 490366 245183 735550 367775 1103326 551663 1654990 827495 2482486 1241243 3723730 1861865 5585596 2792798 1396399 4189198 2094599 6283798 3141899 9425698 4712849 14138548 7069274 3534637 10603912 5301956 2650978 1325489 3976468 1988234 994117 2982352 1491176 745588 372794 186397 559192 279596 139798 69899 209698 104849 314548 157274 78637 235912 117956 58978 29489 88468 44234 22117 66352 33176 16588 8294 4147 12442 6221 18664 9332 4666 2333 7000 3500 1750 875 2626 1313 3940 1970 985 2956 1478 739 2218 1109 3328 1664 832 416 208 104 52 26 13 40 20 10 5 16 8 4 2 1 "
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "98"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collatz(653821)"
    ]
   },
   {
@@ -453,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
