--- a/notebooks/python05.ipynb
+++ b/notebooks/python05.ipynb
@@ -1241,8 +1241,72 @@
    "metadata": {},
    "source": [
     "`text`에 할당된 문자열을 `print(text)` 등을 이용하여 확인할 수 있다. \n",
-    "하지만 여기서는 실행하지 않는다. \n",
-    "텍스트 내용이 너무 길기 때문이다.\n",
+    "텍스트 내용이 너무 길기에 처음 500자(알파벳 기준) 정도를 확인하면 다음과 같다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"A MIDSUMMER-NIGHT'S DREAM\\n\\nNow , fair Hippolyta , our nuptial hour \\nDraws on apace : four happy days bring in \\nAnother moon ; but O ! methinks how slow \\nThis old moon wanes ; she lingers my desires ,\\nLike to a step dame , or a dowager \\nLong withering out a young man's revenue .\\n\\nFour days will quickly steep themselves in night ;\\nFour nights will quickly dream away the time ;\\nAnd then the moon , like to a silver bow \\nNew-bent in heaven , shall behold the night \\nOf our solemnities .\\n\\nGo , Philostr\""
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text[:500]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`print()` 함수를 사용하면 좀 더 정제된 문장을 볼 수 있다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A MIDSUMMER-NIGHT'S DREAM\n",
+      "\n",
+      "Now , fair Hippolyta , our nuptial hour \n",
+      "Draws on apace : four happy days bring in \n",
+      "Another moon ; but O ! methinks how slow \n",
+      "This old moon wanes ; she lingers my desires ,\n",
+      "Like to a step dame , or a dowager \n",
+      "Long withering out a young man's revenue .\n",
+      "\n",
+      "Four days will quickly steep themselves in night ;\n",
+      "Four nights will quickly dream away the time ;\n",
+      "And then the moon , like to a silver bow \n",
+      "New-bent in heaven , shall behold the night \n",
+      "Of our solemnities .\n",
+      "\n",
+      "Go , Philostr\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text[:500])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "그런데 '한여름 밤의 꿈'에 사용된 단어의 수는 몇 개일까?\n",
     "사용된 단어의 수를 확인하는 방법 중의 하나는 `text`에 할당된 문자열을 스페이스, 탭, 줄바꾸기 등을 기준으로 쪼개는 것이다.\n",
     "문자열 클래스의 `split()` 메서드가 그런 기능을 갖고 있다."
@@ -1250,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1339,7 @@
        "980637"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1358,76 @@
     "한 사람이 100만개의 단어를 활용할 수는 없다.\n",
     "실제로 셰익스피어는 자신의 작품 전체를 통틀어 28,829개의 단어를 사용했다고 알려져 있다.\n",
     "(참고: https://www.opensourceshakespeare.org/stats/)\n",
-    "그렇다면 100만과 2만9천 사이의 오차는 어떻게 발생하였을까?"
+    "그렇다면 100만과 2만9천 사이의 오차는 어떻게 발생하였을까?\n",
+    "\n",
+    "처음 50개 단어를 확인해보면 그 이유를 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "MIDSUMMER-NIGHT'S\n",
+      "DREAM\n",
+      "Now\n",
+      ",\n",
+      "fair\n",
+      "Hippolyta\n",
+      ",\n",
+      "our\n",
+      "nuptial\n",
+      "hour\n",
+      "Draws\n",
+      "on\n",
+      "apace\n",
+      ":\n",
+      "four\n",
+      "happy\n",
+      "days\n",
+      "bring\n",
+      "in\n",
+      "Another\n",
+      "moon\n",
+      ";\n",
+      "but\n",
+      "O\n",
+      "!\n",
+      "methinks\n",
+      "how\n",
+      "slow\n",
+      "This\n",
+      "old\n",
+      "moon\n",
+      "wanes\n",
+      ";\n",
+      "she\n",
+      "lingers\n",
+      "my\n",
+      "desires\n",
+      ",\n",
+      "Like\n",
+      "to\n",
+      "a\n",
+      "step\n",
+      "dame\n",
+      ",\n",
+      "or\n",
+      "a\n",
+      "dowager\n",
+      "Long\n",
+      "withering\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(50):\n",
+    "    print(text_words[i])"
    ]
   },
   {
@@ -1326,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1351,7 +1484,7 @@
        "33505"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,66 +1513,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "리스트에 포함된 처음 30개 단어를 확인하면 단어 이외에 쉼표, 느낌표, 콜론 등이 리스트에 포함되어 있음을 알 수 있다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['A',\n",
-       " \"MIDSUMMER-NIGHT'S\",\n",
-       " 'DREAM',\n",
-       " 'Now',\n",
-       " ',',\n",
-       " 'fair',\n",
-       " 'Hippolyta',\n",
-       " ',',\n",
-       " 'our',\n",
-       " 'nuptial',\n",
-       " 'hour',\n",
-       " 'Draws',\n",
-       " 'on',\n",
-       " 'apace',\n",
-       " ':',\n",
-       " 'four',\n",
-       " 'happy',\n",
-       " 'days',\n",
-       " 'bring',\n",
-       " 'in',\n",
-       " 'Another',\n",
-       " 'moon',\n",
-       " ';',\n",
-       " 'but',\n",
-       " 'O',\n",
-       " '!',\n",
-       " 'methinks',\n",
-       " 'how',\n",
-       " 'slow',\n",
-       " 'This']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_words[:30]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "앞서 보았듯이 일반 단어 이외에 쉼표, 느낌표, 콜론 등이 리스트에 포함되어 있음을 알 수 있다.\n",
     "따라서 쉼표(`,`), 마침표(`.`), 느낌표(`!`), 물음표(`?`), 콜론(`:`), 세미콜론(`;`) 등을 \n",
     "리스트에서 제거해야 한다.\n",
     "그리고 경우에 따라 단어 끝에 쉼표, 느낌표 등이 붙어 있을 수도 있는데, \n",
     "동일한 단어에 그런 기호가 붙는 경우와 그렇지 않은 경우도 중복으로 처리해야 한다.\n",
+    "\n",
     "그런데 어떻게 할까? 그리고 어떻게 어떤 기호들이 사용되었는지 알아낼 수 있을까?\n",
     "완벽하지는 않겠지만 아래와 같이 하나의 기호로 구성된 문자열은 길이가 1이라는 사실을 이용하여 사용된 기호들만 따로 \n",
     "하나의 리스트로 만들어보면 사용된 기호를 거의 알아낼 수 있을 것이다."
@@ -1447,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1555,7 @@
        "203281"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1582,7 @@
        "39"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1521,14 +1600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'?', 'o', ',', 'a', '.', 'u', 'p', 'M', 'j', 'v', 'O', 'I', 'h', 'N', '!', '[', 'V', 'C', 'r', 'G', 'T', 'd', 't', 'b', 'B', 'D', ':', 'R', 'i', 'y', 'H', 'A', 'l', ';', 'c', ']', 's', '2', 'e'}\n"
+      "{',', 'C', 'O', 'e', '!', '.', 't', 'N', 'y', 'T', 'R', 's', 'c', ';', 'j', 'G', 'v', 'H', 'l', '?', 'b', 'd', 'I', 'u', 'B', 'p', 'i', ']', 'D', '[', 'o', 'r', 'V', ':', 'A', 'M', 'h', 'a', '2'}\n"
      ]
     }
    ],
@@ -1546,11 +1625,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 제거한 문자들\n",
+    "# 제거 대상 문자\n",
     "symbols = r\" \\n\\t,.!?:;[]\"\n",
     "\n",
     "# 기호를 제거한 단어를 저장할 변수\n",
@@ -1572,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1660,7 @@
        "813736"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1687,7 @@
        "32308"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,11 +1707,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 제거한 문자들\n",
+    "# 제거 대상 문자\n",
     "symbols = r\" \\n\\t,.!?:;[]\"\n",
     "\n",
     "# 기호를 제거한 단어를 저장할 변수\n",
@@ -1655,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1743,7 @@
        "28094"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,7 +1935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
