--- a/practices/practice03.ipynb
+++ b/practices/practice03.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__견본답안__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -47,7 +54,11 @@
    },
    "outputs": [],
    "source": [
-    "t = [[1,2],[3],[4,5,6]]"
+    "def nested_sum(t):\n",
+    "    list = sum(t,[])\n",
+    "    total = sum(list)\n",
+    "\n",
+    "    return total"
    ]
   },
   {
@@ -60,52 +71,14 @@
     "id": "wn8gtPLUf5IS",
     "outputId": "963fa457-bed3-47cb-972f-abe4b681c701"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list =  [1, 2, 3, 4, 5, 6]\n",
-      "21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def nested_sum():\n",
-    "    list = sum(t,[])\n",
-    "    print(\"list = \",list)\n",
-    "\n",
-    "    total = sum(list)\n",
-    "\n",
-    "    return total\n",
-    "\n",
-    "print(nested_sum())"
+    "t = [[1, 2], [3], [4, 5, 6]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n"
-     ]
-    }
-   ],
-   "source": [
-    "def nested_sum(x):\n",
-    "    a=sum(map(sum,x))\n",
-    "    return a\n",
-    "\n",
-    "print(nested_sum(t))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -113,31 +86,73 @@
     "id": "wn8gtPLUf5IS",
     "outputId": "963fa457-bed3-47cb-972f-abe4b681c701"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested_sum(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "하지만 위 함수는 2차원 리스트에 대해서만 작동하며,\n",
+    "예를 들어 아래와 같은 인자가 들어오면 오류를 발생시킨다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = [[1,2],[3],4,5,6]"
+    "t2 = [[1, 2], [3], 4, 5, 6]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "wn8gtPLUf5IS",
+    "outputId": "963fa457-bed3-47cb-972f-abe4b681c701"
+   },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
+     "evalue": "can only concatenate list (not \"int\") to list",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-c42fe8dbef66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnested_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-654c00c31012>\u001b[0m in \u001b[0;36mnested_sum\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnested_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnested_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+      "\u001b[0;32m<ipython-input-5-27501f64b22f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnested_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-7c24fc227866>\u001b[0m in \u001b[0;36mnested_sum\u001b[0;34m(t)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnested_sum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mlist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mtotal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtotal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
      ]
     }
    ],
    "source": [
-    "nested_sum(t1)"
+    "nested_sum(t2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이유는 `t2` 리스트에 리스트가 아닌 항목이 사용되었기 때문이다.\n",
+    "이 문제를 해결"
    ]
   },
   {
@@ -155,6 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections.abc import Iterable\n",
+    "\n",
     "isinstance(4, Iterable)"
    ]
   },
@@ -167,6 +184,78 @@
     "from collections.abc import Iterable\n",
     "\n",
     "isinstance(t, Iterable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = [[1, 2], [3], 4, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t3 = [[1, [2]], [3], 4, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nested_sum(t):\n",
+    "    t_ = []\n",
+    "    \n",
+    "    for x in t:\n",
+    "        if isinstance(x, list):\n",
+    "            t_ += x\n",
+    "        else:\n",
+    "            t_.append(x)\n",
+    "\n",
+    "    return sum(t_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_sum(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_sum(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_sum(t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_sum(t3)"
    ]
   },
   {
@@ -223,15 +312,14 @@
    },
    "outputs": [],
    "source": [
-    "def cumsum():\n",
-    "    list = []\n",
-    "    i = 0\n",
-    "    sum = 0\n",
-    "\n",
-    "    for i in range(3):\n",
-    "        sum += t[i]\n",
-    "        list.append(sum)\n",
-    "    return list"
+    "def cumsum(t):\n",
+    "    aList = []\n",
+    "   \n",
+    "    for i in range(len(t)):\n",
+    "        item = sum(t[:i+1])\n",
+    "        aList.append(item)\n",
+    "        \n",
+    "    return aList"
    ]
   },
   {
@@ -246,7 +334,7 @@
    },
    "outputs": [],
    "source": [
-    "print(cumsum())"
+    "print(cumsum(t))"
    ]
   },
   {
@@ -288,7 +376,7 @@
    },
    "outputs": [],
    "source": [
-    "t = [1, 2, 3, 4]"
+    "t = [1, 2, 3, 4, 5]"
    ]
   },
   {
@@ -303,10 +391,10 @@
    },
    "outputs": [],
    "source": [
-    "def middle():\n",
-    "    list = t[1:3]\n",
+    "def middle(t):\n",
+    "    aList = t[1:len(t)-1]\n",
     "\n",
-    "    return list"
+    "    return aList"
    ]
   },
   {
@@ -321,7 +409,7 @@
    },
    "outputs": [],
    "source": [
-    "print(middle())"
+    "print(middle(t))"
    ]
   },
   {
@@ -409,11 +497,47 @@
     "id": "AI0ykqLRguW6"
    },
    "source": [
-    "__문제 5.__ 아래 기준을 만족하는 `is_sorted` 함수를 구현하라.\n",
+    "__문제 5.__ 아래 기준을 만족하는 `is_sorted()` 함수를 구현하라.\n",
     "\n",
     "* 리스트를 인자로 사용한다.\n",
     "* 입력된 리스트가 올림차순으로 정렬이 되어 있으면 `True`를\n",
     "    그렇치 않으면 `False`를 리턴한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'A' < 'a'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Aa' < 'a'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'ab' < 'ac'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'ab' < 'a'"
    ]
   },
   {
@@ -444,8 +568,8 @@
    },
    "outputs": [],
    "source": [
-    "def is_sorted(list):\n",
-    "    if sorted(list) == list:\n",
+    "def is_sorted(aList):\n",
+    "    if sorted(aList) == aList:\n",
     "        print(\"True\")\n",
     "    else:\n",
     "        print(\"False\")"
@@ -583,6 +707,21 @@
     "\n",
     "* `for` 반복문과 함께 사용되는 `else`의 역할에 주목할 것.\n",
     "    * `break` 활용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in range(2, 10):\n",
+    "    for x in range(2, n):\n",
+    "        if n % x == 0:\n",
+    "            print(f\"{n} = {x}*{n//x}\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(f\"{n}은 소수다.\")"
    ]
   },
   {
