ch07 and practice04 are ready

--- a/notebooks/python07.ipynb
+++ b/notebooks/python07.ipynb
@@ -240,7 +240,9 @@
     "#### 예제\n",
     "\n",
     "길이가 매우 긴 리스트를 대상으로 항목의 존재여부를 판단할 때 집합 자료형으로 형변환을 하면 \n",
-    "매우 빠르게 해결할 수 있다."
+    "매우 빠르게 해결할 수 있다.\n",
+    "\n",
+    "__경고:__ 아래 코드는 10여초 이상 걸릴 수 있음."
    ]
   },
   {
@@ -252,20 +254,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "리스트에서 항목 확인 시간: 느림\n",
       "False\n",
-      "False\n"
+      "2.828252077102661 초\n",
+      "\n",
+      "------\n",
+      "\n",
+      "집합에서 항목 확인 시간: 빠름\n",
+      "False\n",
+      "0.0001499652862548828 초\n"
      ]
     }
    ],
    "source": [
-    "hundreds_of_other_words = []  # 매우 긴 리스트라 상상한다.\n",
-    "stopwords_list = [\"a\", \"an\", \"at\"] \\\n",
-    "                + hundreds_of_other_words + [\"yet\", \"you\"]\n",
+    "import time\n",
     "\n",
-    "print(\"zip\" in stopwords_list)     # 확인 과정이 느리다.\n",
+    "hundreds_of_other_words = list(range(100000000))  # 매우 긴 리스트\n",
     "\n",
+    "print(\"리스트에서 항목 확인 시간: 느림\")\n",
+    "start_time = time.time()\n",
+    "stopwords_list = [\"a\", \"an\", \"at\"] + hundreds_of_other_words + [\"yet\", \"you\"]\n",
+    "print(\"zip\" in stopwords_list) \n",
+    "elapsed_time = time.time() - start_time\n",
+    "print(elapsed_time, \"초\")\n",
+    "\n",
+    "print(\"\\n------\\n\")\n",
+    "\n",
+    "print(\"집합에서 항목 확인 시간: 빠름\")\n",
     "stopwords_set = set(stopwords_list)\n",
-    "print(\"zip\" in stopwords_set)      # 매우 빠르게 확인한다."
+    "start_time = time.time()\n",
+    "print(\"zip\" in stopwords_set)\n",
+    "elapsed_time = time.time() - start_time\n",
+    "print(elapsed_time, \"초\")"
    ]
   },
   {
